# cookiecutter-machine-learning

{{ cookiecutter.repo_name }}/: .editorconfig  .flake8  .pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: PULL_REQUEST_TEMPLATE.md
